--- a/8 Gensim Library (Part 1).ipynb
+++ b/8 Gensim Library (Part 1).ipynb
@@ -645,6 +645,35 @@
       "source": [
         "w2v_embedding.most_similar('toyota')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "912720fd",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[('honda', 0.8739858865737915),\n",
+              " ('nissan', 0.8108116388320923),\n",
+              " ('automaker', 0.7918164134025574),\n",
+              " ('mazda', 0.7687168717384338),\n",
+              " ('bmw', 0.7616022825241089),\n",
+              " ('ford', 0.7547588348388672),\n",
+              " ('motors', 0.7539199590682983),\n",
+              " ('volkswagen', 0.7176680564880371),\n",
+              " ('prius', 0.7156583070755005),\n",
+              " ('chrysler', 0.7085398435592651)]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "w2v_embedding.most_similar('toyota')"
+      ]
     }
   ],
   "metadata": {
